# fashion-garment

./: .dockerignore  .env.example  .gitignore  Dockerfile.test  README.md  docker-compose.yml  pytest.ini
app/backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/backend/garment_api/: __init__.py  config.py  db.py  main.py
app/backend/models/: __init__.py  database.py  image.py
app/backend/routes/: images.py
app/backend/scripts/: backfill_description_embeddings.py  clear_all_annotations.py  sync_annotations_from_description.py
app/backend/services/: __init__.py  ai_classifier.py  annotation_from_description.py  annotation_utils.py  config.py  embeddings.py  image_crud.py  image_embedding.py  image_filters.py  image_service.py  metadata_fields.py  seed_example_gallery.py
app/frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json
app/frontend/src/app/: layout.tsx  page.tsx
app/frontend/src/components/: AnnotationEditModal.tsx  ApiStatus.tsx  GalleryPage.tsx  Nav.tsx  Spinner.tsx
eval/: README.md  __init__.py  evaluation.py  llm_judge.py  run_eval.py  run_example_eval.sh
eval/data/example_dataset/: README.md  labels.example.json
eval/results/: README.md  eval_snapshot_gpt4o.json  snapshot_manifest.json
eval/scripts/: download_pexels_fashion.py  export_dataset_from_db.py  ingest_pexels_to_backend.py
tests/: conftest.py
tests/e2e/: test_upload_classify_filter.py
tests/integration/: test_images_filter_endpoint.py
tests/unit/: test_ai_classifier_parse.py
(+4 files in other folders)
